# reinventory-manager

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0.txt  LICENSE-MIT.txt  README.md  deny.toml  renovate.json
.github/workflows/: build-and-test.yml  cargo-deny.yaml  release-binary.yml
src/: cli.rs  main.rs  model.rs  operation.rs
