[package]
name = "neosvr-inventory-management"
version = "0.1.13"
edition = "2021"
rust-version = "1.60"
authors = [
    "KisaragiEffective <kisaragi.effective@gmail.com>",
    "kisaragi marine <kisaragi.marine@gmail.com>",
]
description = "An handy tool that is intended to help your inventory cleanup or dump."
readme = "README.md"
repository = "https://github.com/KisaragiMarine/neosvr-inventory-management"
license = "MIT OR Apache-2.0"
keywords = ["neosvr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
is-terminal = "0.4.7"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
derive_more = "0.99.17"
email_address = "0.2.4"
fern = { git = "https://github.com/KisaragiEffective/fern", branch = "kisaragieffective", version = "0.6.2-kisaragi-5", features = ["min_colored"] }
log = "0.4.17"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", default-features = false, features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4"] }

[features]
https_rustls = ["reqwest/rustls-tls-native-roots"]
# split rules for following targets, because rustls does not support these targets yet:
# - aarch64-apple-darwin (https://github.com/briansmith/ring/issues/1442)
# - aarch64-pc-windows-msvc (https://github.com/briansmith/ring/issues/1167)
# Above targets do not depend on OpenSSL, according to reqwest.
# NOTE: You will not want to enable this feature if your target is Linux, because it depends on OpenSSL;
# USE AT YOUR OWN PERIL!!
https_os_native = ["reqwest/native-tls"]
