[package]
name = "reinventory-manager"
version = "0.2.1"
edition = "2021"
rust-version = "1.60"
authors = [
    "KisaragiEffective <kisaragi.effective@gmail.com>",
    "kisaragi marine <kisaragi.marine@gmail.com>",
]
description = "An handy tool that is intended to help your inventory cleanup or dump."
readme = "README.md"
repository = "https://github.com/KisaragiMarine/neosvr-inventory-management"
license = "MIT OR Apache-2.0"
keywords = ["neosvr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-recursion = "1.0.5"
is-terminal = "0.4.12"
base64 = "0.21.7"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
derive_more = "0.99.17"
email_address = "0.2.4"
fern = { git = "https://github.com/KisaragiEffective/fern", branch = "kisaragieffective", version = "0.6.2-kisaragi-5", features = ["min_colored"] }
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }

[features]
https_rustls = ["reqwest/rustls-tls-native-roots"]
# split rules for following targets, because rustls does not support these targets yet:
# - aarch64-apple-darwin (https://github.com/briansmith/ring/issues/1442)
# - aarch64-pc-windows-msvc (https://github.com/briansmith/ring/issues/1167)
# Above targets do not depend on OpenSSL, according to reqwest.
# NOTE: You will not want to enable this feature if your target is Linux, because it depends on OpenSSL;
# USE AT YOUR OWN PERIL!!
https_os_native = ["reqwest/native-tls"]
